# mrc-sop-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  db.py  learning.py  main.py  seed.py  validation.py
docs/: ONBOARDING_SOURCES.md
policies/MRC CT Policies & Procedures/: Policy & Procedure Directory.xlsx
policies/MRC CT Policies & Procedures/Client Care (CC)/: CC.06.MRC - Client Grievances.docx  CC.MRC.CT Client Rights.docx  MRCCT - Medication Administration.docx  MRCCT - Medication Prescription & Control.docx  MRCCT Admissions Assessment P&P.docx  MRCCT Client Emergency & Crisis Intervention  P&P.docx  MRCCT Client Food Services P&P.docx  MRCCT Drug Screening P&P.docx  MRCCT Referrals.docx  MRCCT Treatment Planning P&P.docx
policies/MRC CT Policies & Procedures/Documentation (DO)/: DO.MRC.CT Content of Client Records.docx  DO.MRC.CT Release of Information.docx  OP.MRC.CT Access to Client Records.docx  PO.MRC.CT Client Records.docx
scripts/: import_sops.py
static/: style.css
templates/: account.html  admin_edit.html  admin_list.html  admin_new.html  admin_staff.html  admin_users.html  audit_log.html  base.html  compliance.html  evidence.html  hr.html  hr_import_preview.html  hr_onboarding.html  hr_rules.html  hr_staff_edit.html  hr_template_edit.html  hr_templates.html  index.html  learning.html  learning_admin.html  learning_admin_edit.html  learning_certificate.html  learning_module.html  learning_reports.html  login.html  sop_detail.html  sop_library.html  sop_print.html
(+10 files in other folders)
